# agentic_systemsthinking

./: .cursorignore  .gitignore  Makefile  PROJECT_STRUCTURE.md  README.md  REFACTOR_STATUS.md  docker-compose.yml  env.example
config/: project.conf
docker/: dev.yml  init.sql
docker/dev/: Dockerfile.agent  Dockerfile.gui  Dockerfile.java  Dockerfile.rust
docs/: README.md
docs/01-requirements/: README.md  thinkcamp-product-requirements.md  thinkcamp-user-story-mapping.md
docs/02-architecture/: README.md
docs/03-technology/: README.md  thinkcamp-tech-architecture.md
docs/04-implementation/: README.md  deployment-guide.md  development-guide.md
scripts/: README.md
scripts/config/: ports.conf  services.conf
scripts/dev/: check-docker.sh  cleanup.sh  pre-download-deps.sh  restart-optimized.sh  restart.sh  start-complete.sh  start-dev.sh  status.sh  stop-complete.sh  switch-env.sh  test-endpoints.sh  (+1 more)
src/ai/agents/: README.md  pyproject.toml  requirements.txt
src/ai/agents/java/: .dockerignore  Dockerfile  pom.xml
src/ai/agents/java/src/main/java/com/agentic/systemthinking/agents/: JavaAgentApplication.java
src/ai/agents/java/src/main/java/com/agentic/systemthinking/agents/config/: AgentConfig.java  CorsConfig.java
src/ai/agents/java/src/main/java/com/agentic/systemthinking/agents/interfaces/: HealthController.java
src/ai/agents/java/src/main/resources/: application.yml
src/ai/agents/orchestration/: Dockerfile  pom.xml
src/ai/agents/orchestration/src/main/java/com/agentic/systemthinking/orchestration/: OrchestrationApplication.java
src/ai/agents/orchestration/src/main/java/com/agentic/systemthinking/orchestration/application/dto/: AgentDTO.java  HealthStatusDTO.java
src/ai/agents/orchestration/src/main/java/com/agentic/systemthinking/orchestration/application/port/: AgentRepository.java
src/ai/agents/orchestration/src/main/java/com/agentic/systemthinking/orchestration/application/service/: OrchestrationService.java
src/ai/agents/orchestration/src/main/java/com/agentic/systemthinking/orchestration/domain/entity/: Agent.java
src/ai/agents/orchestration/src/main/java/com/agentic/systemthinking/orchestration/domain/service/: AgentHealthService.java
src/ai/agents/orchestration/src/main/java/com/agentic/systemthinking/orchestration/domain/valueobject/: AgentStatus.java  HealthStatus.java
src/ai/agents/orchestration/src/main/java/com/agentic/systemthinking/orchestration/infrastructure/config/: CorsConfig.java  OrchestrationProperties.java
src/ai/agents/orchestration/src/main/java/com/agentic/systemthinking/orchestration/interfaces/controller/: HealthController.java
src/ai/agents/orchestration/src/main/resources/: application.yml
src/ai/agents/python/: Dockerfile  main.py  requirements.txt  run.py
src/ai/agents/python/application/: agent_service.py
src/ai/agents/python/domain/: agent.py
src/ai/agents/python/interfaces/: api.py
src/ai/agents/src/: main.py
src/client/desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/server/rust/: Cargo.toml  README.md
src/server/rust/src/: main.rs
(+29 files in other folders)
